[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Other/theme.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/States/Multiplayer/MultiState/Popups/multi_popup_player.gd" type="Script" id=2]
[ext_resource path="res://Scenes/States/Multiplayer/Other/MultiCard.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Card:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Card:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 358, 353 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "appear"
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("Card:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.416667 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Card:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.416667 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 358, 380 ), Vector2( 358, 232 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "hide"
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("Card:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.416667 ),
"transitions": PoolRealArray( 0.5, 2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Card:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.416667 ),
"transitions": PoolRealArray( 0.5, 2 ),
"update": 0,
"values": [ Vector2( 358, 353 ), Vector2( 358, 380 ) ]
}

[node name="MultiPlayerPopup" type="Node2D"]
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "appear"
anims/RESET = SubResource( 2 )
anims/appear = SubResource( 1 )
anims/hide = SubResource( 3 )

[node name="Card" parent="." instance=ExtResource( 3 )]
position = Vector2( 358, 353 )

[node name="Edit" type="Node2D" parent="Card"]
position = Vector2( -267, 193 )

[node name="EditPanel" type="Panel" parent="Card/Edit"]
margin_top = 8.0
margin_right = 539.0
margin_bottom = 253.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Card/Edit/EditPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3

[node name="Container" type="VBoxContainer" parent="Card/Edit/EditPanel/ScrollContainer"]
margin_right = 539.0
margin_bottom = 245.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )

[node name="NameContainer" type="HBoxContainer" parent="Card/Edit/EditPanel/ScrollContainer/Container"]
margin_right = 539.0
margin_bottom = 41.0

[node name="Title" type="Label" parent="Card/Edit/EditPanel/ScrollContainer/Container/NameContainer"]
margin_top = 4.0
margin_right = 263.0
margin_bottom = 37.0
rect_min_size = Vector2( 263, 0 )
text = "Name"
clip_text = true

[node name="NameEdit" type="LineEdit" parent="Card/Edit/EditPanel/ScrollContainer/Container/NameContainer"]
margin_left = 275.0
margin_right = 539.0
margin_bottom = 41.0
size_flags_horizontal = 3
max_length = 12
placeholder_text = "Username"

[node name="sep1" type="HSeparator" parent="Card/Edit/EditPanel/ScrollContainer/Container"]
margin_top = 45.0
margin_right = 539.0
margin_bottom = 53.0

[node name="CharacterContainer" type="HBoxContainer" parent="Card/Edit/EditPanel/ScrollContainer/Container"]
margin_top = 57.0
margin_right = 539.0
margin_bottom = 100.0

[node name="CharacterLabel" type="Label" parent="Card/Edit/EditPanel/ScrollContainer/Container/CharacterContainer"]
margin_top = 5.0
margin_right = 263.0
margin_bottom = 38.0
size_flags_horizontal = 3
text = "Character"
clip_text = true

[node name="CharacterButton" type="Button" parent="Card/Edit/EditPanel/ScrollContainer/Container/CharacterContainer"]
margin_left = 275.0
margin_right = 539.0
margin_bottom = 43.0
size_flags_horizontal = 3
text = "Pick Character"

[node name="SongContainer" type="HBoxContainer" parent="Card/Edit/EditPanel/ScrollContainer/Container"]
margin_top = 104.0
margin_right = 539.0
margin_bottom = 147.0

[node name="SongLabel" type="Label" parent="Card/Edit/EditPanel/ScrollContainer/Container/SongContainer"]
margin_top = 5.0
margin_right = 263.0
margin_bottom = 38.0
size_flags_horizontal = 3
text = "Favorite Song"
clip_text = true

[node name="SongButton" type="Button" parent="Card/Edit/EditPanel/ScrollContainer/Container/SongContainer"]
margin_left = 275.0
margin_right = 539.0
margin_bottom = 43.0
size_flags_horizontal = 3
text = "Pick Song"

[node name="sep2" type="HSeparator" parent="Card/Edit/EditPanel/ScrollContainer/Container"]
margin_top = 151.0
margin_right = 539.0
margin_bottom = 159.0

[node name="DescriptionEdit" type="LineEdit" parent="Card/Edit/EditPanel/ScrollContainer/Container"]
visible = false
margin_right = 92.0
margin_bottom = 41.0
max_length = 80
placeholder_text = "Description"

[node name="ResetButton" type="Button" parent="Card/Edit/EditPanel/ScrollContainer/Container"]
margin_top = 163.0
margin_right = 539.0
margin_bottom = 206.0
text = "Reset Funk Kard"

[connection signal="closed" from="." to="." method="_on_MultiPlayerPopup_closed"]
[connection signal="text_changed" from="Card/Edit/EditPanel/ScrollContainer/Container/NameContainer/NameEdit" to="." method="_on_NameEdit_text_changed"]
[connection signal="pressed" from="Card/Edit/EditPanel/ScrollContainer/Container/CharacterContainer/CharacterButton" to="." method="_on_CharacterButton_pressed"]
[connection signal="pressed" from="Card/Edit/EditPanel/ScrollContainer/Container/SongContainer/SongButton" to="." method="_on_SongButton_pressed"]
[connection signal="text_changed" from="Card/Edit/EditPanel/ScrollContainer/Container/DescriptionEdit" to="." method="_on_DescriptionEdit_text_changed"]
[connection signal="pressed" from="Card/Edit/EditPanel/ScrollContainer/Container/ResetButton" to="." method="_on_ResetButton_pressed"]
